sdk/python/lib/test/provider/experimental/testdata/analyzer-errors/syntax-error/component.py
from typing import TypedDict

import pulumi


class Args(TypedDict):
    a: str


class Component(pulumi.ComponentResource):
    def __init__(self, args: Args): ...

syntax error here
